user model updated and twitter omniauth initialized

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 	    <a class="btn btn-block btn-social btn-google">
 	      <span class="fa fa-google"></span> Sign in with Google
 	    </a>
-	    <a class="btn btn-block btn-social btn-twitter">
+	    <a href="<%= user_twitter_omniauth_authorize_path %>" class="btn btn-block btn-social btn-twitter">
 	      <span class="fa fa-twitter"></span> Sign in with Twitter
 	    </a>
 	  </div>
