facebook callback added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 	  <div class="col-sm-4 social-buttons">
 	    <h3 class="text-center">Example Providers</h3>
 	    
-	    <a class="btn btn-block btn-social btn-facebook">
+	    <a href="<%= user_facebook_omniauth_authorize_path %>" class="btn btn-block btn-social btn-facebook">
 	      <span class="fa fa-facebook"></span> Sign in with Facebook
 	    </a>
 	    <a class="btn btn-block btn-social btn-github">
