google oauth2 callback added

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 	    <a class="btn btn-block btn-social btn-github">
 	      <span class="fa fa-github"></span> Sign in with GitHub
 	    </a>
-	    <a class="btn btn-block btn-social btn-google">
+	    <a href="<%= user_google_oauth2_omniauth_authorize_path %>" class="btn btn-block btn-social btn-google">
 	      <span class="fa fa-google"></span> Sign in with Google
 	    </a>
 	    <a href="<%= user_twitter_omniauth_authorize_path %>" class="btn btn-block btn-social btn-twitter">
